--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="Present For U :)"
+    />
+    <meta 
+      name="image"
+      property="og:image"
+      content="%PUBLIC_URL%/IMG_9330.JPG"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
